welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
	if (noDoubles == true && die1 == die2) {
		if (die1 == 6 || die2 == 6) {
			return die1 + die2 + 1
		} else {
			return die1 + die2
		} else {
			if (noDoubles == false) {
				return die1 + die2
			}
		}
	}
}